fix : @Lazy 제거 Event-driven 방식으로 수정